--- a/style.scss
+++ b/style.scss
@@ -146,12 +146,10 @@ h2 {
         margin: 5px auto;
         padding: 10px;
         box-sizing: border-box;
-        transition: 0.3s box-shadow ease-out;
-        border: 2px solid #131313;
-        border-bottom: 2px solid #59b0ff;
-        box-shadow: inset 0 0px 6px -8px #59b0ff;
+        transition: 0.3s box-shadow ease;
+        box-shadow: inset 0 -10px 0px -8px #59b0ff;
         &:hover {
-            box-shadow: inset 0 -8px 6px -8px #59b0ff;
+            box-shadow: inset 0 -10px 0px -8px #59b0ff, inset 0 -20px 10px -20px #59b0ff;
         }
         h3 {
             text-align: center;
